# opencti-mcp

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  SECURITY.md  SETUP.md  opencti_query.py  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/internal/: DESIGN_REVIEW.md  ORIGINAL_DESIGN.md  REFERENCE_MCP_SERVER.md
src/opencti_mcp/: __init__.py  __main__.py  adaptive.py  cache.py  client.py  config.py  errors.py  feature_flags.py  logging.py  server.py  validation.py
tests/: TEST_PLAN.md  __init__.py  conftest.py  test_adaptive.py  test_advanced_security.py  test_cache.py  test_chaos_resilience.py  test_client.py  test_comprehensive_security.py  test_configurable_allowlists.py  test_connection_matrix.py  test_contract_integration.py  test_coverage_gaps.py  test_deep_security.py  test_edge_cases_deep.py  test_exhaustive_functional.py  test_exhaustive_security.py  test_fuzzing_mutations.py  test_high_threat_security.py  test_lifecycle_matrix.py  test_live_new_features.py  test_logging.py  test_mcp_protocol.py  test_network_matrix.py  test_new_features.py  test_new_validations.py  test_performance.py  test_resilience_matrix.py  test_review_fixes.py  test_security.py  test_server.py  test_tool_edge_cases.py  test_validation.py
