[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencti-mcp"
version = "0.5.0"
description = "OpenCTI MCP Server - Threat Intelligence for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AppliedIncidentResponse.com" }
]
keywords = ["mcp", "opencti", "threat-intelligence", "security", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "pycti>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
opencti-mcp = "opencti_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opencti_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.coverage.run]
source = ["src/opencti_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
